<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:background="@color/greeny"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/vivuraTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VIVURA Cash"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_below="@id/login"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        />


    <ImageView
        android:id="@+id/simpleImageView"
        android:layout_width="270dp"
        android:layout_height="150dp"
        android:src="@drawable/img"
        android:layout_below="@id/vivuraTextview"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/simpleImageView"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="20dp"
        android:inputType="phone"
        android:padding="15dp"
        android:hint="Phone"
        android:textColorHint="@color/greeny"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPhone"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_open_24"
        android:drawablePadding="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="@color/greeny"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:text="Forgot Password?"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:background="@color/greeny"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"

        >
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/txtaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_below="@id/loginbtn"
        android:layout_marginTop="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtaccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:background="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:onClick="dosomething"
        android:padding="0dp"
        />


</RelativeLayout>
